# Metis

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: help.html  help.js
scripts/: verify-import-paths.mjs
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  help.json
src-tauri/icons/: icon.icns
src-tauri/resources/dictionaries/: README.md
src-tauri/src/: ai_context.rs  conversion.rs  lib.rs  main.rs  menu.rs  search.rs  security.rs  settings.rs  shell.rs  spellcheck.rs  state.rs  types.rs  watcher.rs
src-tauri/src/vault_fs/: commands.rs  meta.rs  mod.rs
src/components/: CommandCenter.tsx  CommandPalette.tsx  ContextMenu.tsx  ConvertVaultModal.tsx  CreateVaultModal.tsx  DailyTaskGrid.tsx  Editor.tsx  EditorFindBar.tsx  EgressTransparency.tsx  ExportPdfModal.tsx  MarkdownPreview.tsx  MetadataPanel.tsx  ModelPicker.tsx  PersonaCreator.tsx  PlannerCodeMirrorField.tsx  QuickActionsSettings.tsx  SearchPanel.tsx  SelectionToolbar.tsx  Sidebar.tsx  Toolbar.tsx  VaultImageViewer.tsx  editorExtensions.ts  egressConfirm.ts  spellcheck.ts  toolbarActions.ts
src/config/: keybindings.ts
src/constants/: vaultSpaces.ts
src/hooks/: useMenuEvents.ts  useStickyToolbarDrag.ts
src/planner/: plannerFieldHeights.ts  plannerStorage.ts
src/services/: aiService.ts  contextBuilder.ts  geminiNative.ts  (+2 more)
wiki/: .order  Architecture-Overview.md  Editor-Extensions.md  Home.md  Metis-Architecture.md  Planner-Module.md
(+48 files in other folders)
